fix: css for extra padding not needed

--- a/static/extremeheat/page2/style.css
+++ b/static/extremeheat/page2/style.css
@@ -1373,7 +1373,3 @@
 	text-decoration: none;
 	color: inherit; /* Ensure the link inherits the color of the surrounding text */
   }
-
-  .version .extra-padding {
-	padding-bottom: 10px; /* Adjust as needed */
-  }
